k8s/apps/kustomize/paperless-ngx/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
spec:
  selector:
    app: paperless-ngx
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: http
