k8s/apps/kustomize/paperless-ngx/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  labels:
    app: paperless-ngx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`domain.invalid`) # needs to be replaced by patch
      kind: Rule
      services:
      - name: paperless-ngx
        port: 8000
  tls:
    certResolver: letsencrypt
